fix z-index for mony and quickview background

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -313,8 +313,11 @@ body {
   opacity: 1;
 }
 
-.quickview {
+.app-backdrop.backdrop-quickview {
   z-index: 1002;
+}
+.quickview {
+  z-index: 1003;
 }
 
 // fix icon alignment
